Mon Mar 12 21:03:15 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/checked_iterator.h (TAO_checked_array_iterator):

          New function template that returns a checked iterator if
          supported by the platform (currently VC8 or better), and a
          pointer otherwise.

        * tao/Generic_Sequence_T.h (generic_sequence, length):
        * tao/Unbounded_Octet_Sequence_T.h (length):

          Call new TAO_checked_array_iterator<>() iterator factory
          function to generate destination iterator.  Addresses VC8
          "C4996" warnings when security related warnings are enabled.

        * tao/Value_Traits_T.h (copy_range):

          Made this trait method a member template to simplify support for
          checked destination iterators.

        * tao/Makefile.am:
        * tao/tao.mpc:

          Added new tao/checked_iterator.h header to the appropriate
          header lists.

Mon Mar 12 17:38:26 UTC 2007  Steve Huston  <shuston@riverace.com>

        * MPC/config/tao_vc8warnings.mpb: Added disabler for the
          "warning C4996: 'std::_Copy_opt' was declared deprecated" warnings
          emanating from Microsoft's STL. Added it for both the vc8 and
          nmake types. Also, added a nmake specific option to disable
          the inherits-via-dominance warning and removed that one from
          the ACE vc8nmake.mpb.

          Also moved the warning 4290 disabler (unimplemented exception
          spec) from ACE's vc8nmake.mpb to here.

Mon Mar 11 13:52:52 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2800_Regression/server.cpp:
        * orbsvcs/tests/Bug_2800_Regression/nsmain.cpp:
          Exit with -1 when we can't activate the test tasks

Mon Mar 11 13:44:52 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DiffServ/server.cpp:
        * tests/DiffServ/client.cpp:
          Include DiffservPolicy.h so that the static initializers to run