@@ -1,3 +1,9 @@
+Mon Mar 12 21:35:25 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
+
+        * tao/TAO_Internal.cpp:
+
+          Fixed compilation errors on WinCE 5.0 builds.
+
 Mon Mar 12 21:03:15 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>
 
         * tao/checked_iterator.h (TAO_checked_array_iterator):
